--- a/Yobit.Exchange.Api/Yobit.Api.csproj
+++ b/Yobit.Exchange.Api/Yobit.Api.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Yobit.Exchange.Api</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
 </Project>
