--- a/Yobit.Exchange.Api/Yobit.Api.csproj
+++ b/Yobit.Exchange.Api/Yobit.Api.csproj
@@ -10,4 +10,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TradingBot.Core\TradingBot.Core.csproj" />
+  </ItemGroup>
+
 </Project>
