* added pairs generic info table * pull method for pairs generic info and method to view particular info from cache (db) *

--- a/Domain/TradingBot.Domain.csproj
+++ b/Domain/TradingBot.Domain.csproj
@@ -60,7 +60,12 @@
     <Compile Include="Migrations\201802101323280_AddedSalt.Designer.cs">
       <DependentUpon>201802101323280_AddedSalt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802101918012_AddedPairInfos.cs" />
+    <Compile Include="Migrations\201802101918012_AddedPairInfos.Designer.cs">
+      <DependentUpon>201802101918012_AddedPairInfos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\PairInfo.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountTypeEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,6 +76,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Services\BaseService.cs" />
+    <Compile Include="Services\PairService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -96,6 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201802101323280_AddedSalt.resx">
       <DependentUpon>201802101323280_AddedSalt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802101918012_AddedPairInfos.resx">
+      <DependentUpon>201802101918012_AddedPairInfos.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
