--- a/TradingBot.Core/TradingBot.Core.csproj
+++ b/TradingBot.Core/TradingBot.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\Domain\TradingBot.Domain.csproj" />
   </ItemGroup>
 
