--- a/TradingBot.Console/TradingBot.Cmd.csproj
+++ b/TradingBot.Console/TradingBot.Cmd.csproj
@@ -61,25 +61,25 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{cefc6906-aa84-4056-9286-65cc2a6ca2ce}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Domain\TradingBot.Domain.csproj">
       <Project>{0c9ef55e-f464-42f3-a345-e01dfa548bcc}</Project>
       <Name>TradingBot.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Exchange.API\Yobit.Api\Yobit.Api.csproj">
+      <Project>{1861FBAF-F851-4825-844C-77A4B04AA0FC}</Project>
+      <Name>Yobit.Api</Name>
     </ProjectReference>
     <ProjectReference Include="..\TradinBot.Services\TradinBot.Services.csproj">
       <Project>{e8e30fa4-4bb3-4ead-a120-30b14adb73e2}</Project>
       <Name>TradinBot.Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\TradingBot.Core\TradingBot.Core.csproj">
-      <Project>{d49b0cce-7ebe-430d-8c92-4221752f3329}</Project>
+      <Project>{52453ad4-1cb6-4f6a-b93f-fd20172a0a04}</Project>
       <Name>TradingBot.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Yobit.Exchange.Api\Yobit.Api.csproj">
-      <Project>{0ea3272e-dfbe-4126-801c-16d9a3bb7beb}</Project>
-      <Name>Yobit.Api</Name>
+    <ProjectReference Include="..\TradingBot.Data\TradingBot.Data.csproj">
+      <Project>{3763444D-C277-47A8-B0EB-233F632BBE96}</Project>
+      <Name>TradingBot.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
