* dynamic GetPairs (determine api by account type enum)

--- a/TradinBot.Services/TradinBot.Services.csproj
+++ b/TradinBot.Services/TradinBot.Services.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BaseService.cs" />
+    <Compile Include="Services\ExchangeInfo.cs" />
     <Compile Include="Services\PairService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
