Move db file into bin folder

--- a/TradingBot.CommandPrompt/App.config
+++ b/TradingBot.CommandPrompt/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<connectionStrings>
 		<clear />
-		<add name="BotConnectionString" connectionString="Data Source=Data/BotDb.db" />
+		<add name="BotConnectionString" connectionString="Data Source=bin/debug/netcoreapp2.0/BotDb.db" />
 	</connectionStrings>
 </configuration>
