--- a/TradingBot.Data/TradingBot.Data.csproj
+++ b/TradingBot.Data/TradingBot.Data.csproj
@@ -19,7 +19,7 @@
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\Common\Common.csproj" />
+	  <ProjectReference Include="..\TradingBot.Common\TradingBot.Common.csproj" />
 	  <ProjectReference Include="..\TradingBot.Core\TradingBot.Core.csproj" />
 	</ItemGroup>
 
