--- a/TradingBot.Common/TradingBot.Common.csproj
+++ b/TradingBot.Common/TradingBot.Common.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>TradingBot.Common</RootNamespace>
+    <AssemblyName>TradingBot.Common</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
