Added ClientFactory & some abstraction

--- a/TradingBot.CommandPrompt/App.config
+++ b/TradingBot.CommandPrompt/App.config
@@ -4,4 +4,7 @@
 		<clear />
 		<add name="BotConnectionString" connectionString="Data Source=bin/debug/netcoreapp2.0/BotDb.db" />
 	</connectionStrings>
+	<appSettings>
+		<add key="Yobit" value="Yobit.Api.YobitClient"/>
+	</appSettings>
 </configuration>
