Changed API entities location, cleanup, add client API abstraction

--- a/TradingBot.Core/TradingBot.Core.csproj
+++ b/TradingBot.Core/TradingBot.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
   </ItemGroup>
 
