--- a/TradingBot.WPF/TradingBot.WPF.csproj
+++ b/TradingBot.WPF/TradingBot.WPF.csproj
@@ -83,7 +83,7 @@
       <DependentUpon>Introduction.xaml</DependentUpon>
     </Compile>
     <Compile Include="Win32\MonitorDpiType.cs" />
-    <Compile Include="Win32\NativeMethods.cs" />
+    <Compile Include="Win32\Native.cs" />
     <Compile Include="Win32\OSVersionHelper.cs" />
     <Compile Include="Win32\RECT.cs" />
     <Compile Include="Windows\CommandDictionary.cs" />
