--- a/TradingBot.CommandPrompt/TradingBot.CommandPrompt.csproj
+++ b/TradingBot.CommandPrompt/TradingBot.CommandPrompt.csproj
@@ -13,6 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\Binance.Api\Binance.Api.csproj" />
 		<ProjectReference Include="..\Exchange.API\Yobit.Api\Yobit.Api.csproj" />
 		<ProjectReference Include="..\TradingBot.Common\TradingBot.Common.csproj" />
 		<ProjectReference Include="..\TradingBot.Data\TradingBot.Data.csproj" />
