--- a/Huobi.Api/Huobi.Api.csproj
+++ b/Huobi.Api/Huobi.Api.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TradingBot.Common\TradingBot.Common.csproj" />
+    <ProjectReference Include="..\TradingBot.Core\TradingBot.Core.csproj" />
+  </ItemGroup>
+
 </Project>
