--- a/TradingBot.CommandPrompt/TradingBot.CommandPrompt.csproj
+++ b/TradingBot.CommandPrompt/TradingBot.CommandPrompt.csproj
@@ -19,6 +19,7 @@
 		<ProjectReference Include="..\Exchange.API\Yobit.Api\Yobit.Api.csproj" />
 		<ProjectReference Include="..\Huobi.Api\Huobi.Api.csproj" />
 		<ProjectReference Include="..\Kucoin.Api\Kucoin.Api.csproj" />
+		<ProjectReference Include="..\Okex.Api\Okex.Api.csproj" />
 		<ProjectReference Include="..\TradingBot.Common\TradingBot.Common.csproj" />
 		<ProjectReference Include="..\TradingBot.Data\TradingBot.Data.csproj" />
 		<ProjectReference Include="..\TradingBot.Services\TradingBot.Services.csproj" />
