--- a/Exchange.API/Exmo.Api/Exmo.Api.csproj
+++ b/Exchange.API/Exmo.Api/Exmo.Api.csproj
@@ -8,4 +8,9 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\TradingBot.Common\TradingBot.Common.csproj" />
+    <ProjectReference Include="..\..\TradingBot.Core\TradingBot.Core.csproj" />
+  </ItemGroup>
+
 </Project>
