--- a/Exchange.API/Cryptopia.Api/Cryptopia.Api.csproj
+++ b/Exchange.API/Cryptopia.Api/Cryptopia.Api.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TradingBot.Common\TradingBot.Common.csproj" />
-    <ProjectReference Include="..\TradingBot.Core\TradingBot.Core.csproj" />
+    <ProjectReference Include="..\..\TradingBot.Common\TradingBot.Common.csproj" />
+    <ProjectReference Include="..\..\TradingBot.Core\TradingBot.Core.csproj" />
   </ItemGroup>
 
 </Project>
