Small refactoring, bug fixes, add data formats responses for researching

--- a/TradingBot.CommandPrompt/TradingBot.CommandPrompt.csproj
+++ b/TradingBot.CommandPrompt/TradingBot.CommandPrompt.csproj
@@ -14,8 +14,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\Exchange.API\Binance.Api\Binance.Api.csproj" />
 		<ProjectReference Include="..\Exchange.API\Bitfinex.Api\Bitfinex.Api.csproj" />
+		<ProjectReference Include="..\Exchange.API\Cryptopia.Api\Cryptopia.Api.csproj" />
 		<ProjectReference Include="..\Exchange.API\Exmo.Api\Exmo.Api.csproj" />
+		<ProjectReference Include="..\Exchange.API\Huobi.Api\Huobi.Api.csproj" />
+		<ProjectReference Include="..\Exchange.API\Kucoin.Api\Kucoin.Api.csproj" />
+		<ProjectReference Include="..\Exchange.API\Okex.Api\Okex.Api.csproj" />
 		<ProjectReference Include="..\Exchange.API\Yobit.Api\Yobit.Api.csproj" />
 		<ProjectReference Include="..\TradingBot.Common\TradingBot.Common.csproj" />
 		<ProjectReference Include="..\TradingBot.Data\TradingBot.Data.csproj" />
