--- a/Exchange.API/Kucoin.Api/Kucoin.Api.csproj
+++ b/Exchange.API/Kucoin.Api/Kucoin.Api.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\..\TradingBot.Core\TradingBot.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp">
+      <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\Microsoft.CSharp\v4.0_4.0.0.0__b03f5f7f11d50a3a\Microsoft.CSharp.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
