--- a/TradingBot.CommandPrompt/TradingBot.CommandPrompt.csproj
+++ b/TradingBot.CommandPrompt/TradingBot.CommandPrompt.csproj
@@ -23,6 +23,7 @@
 		<ProjectReference Include="..\Exchange.API\Okex.Api\Okex.Api.csproj" />
 		<ProjectReference Include="..\Exchange.API\Yobit.Api\Yobit.Api.csproj" />
 		<ProjectReference Include="..\TradingBot.Common\TradingBot.Common.csproj" />
+		<ProjectReference Include="..\TradingBot.CurrencyProvider\TradingBot.CurrencyProvider.csproj" />
 		<ProjectReference Include="..\TradingBot.Data\TradingBot.Data.csproj" />
 		<ProjectReference Include="..\TradingBot.Services\TradingBot.Services.csproj" />
 	</ItemGroup>
