--- a/TradingBot.CurrencyProvider/TradingBot.CurrencyProvider.csproj
+++ b/TradingBot.CurrencyProvider/TradingBot.CurrencyProvider.csproj
@@ -1,11 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\TradingBot.Core\TradingBot.Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\TradingBot.Common\TradingBot.Common.csproj" />
+		<ProjectReference Include="..\TradingBot.Core\TradingBot.Core.csproj" />
+	</ItemGroup>
 
+	<ItemGroup>
+		<Reference Include="Microsoft.CSharp">
+			<HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\Microsoft.CSharp\v4.0_4.0.0.0__b03f5f7f11d50a3a\Microsoft.CSharp.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 </Project>
