--- a/TradingBot.Web/TradingBot.Web.csproj
+++ b/TradingBot.Web/TradingBot.Web.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
