--- a/TradingBot.Common/TradingBot.Common.csproj
+++ b/TradingBot.Common/TradingBot.Common.csproj
@@ -14,4 +14,13 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="NLog">
+      <HintPath>C:\Users\Roman\.nuget\packages\nlog\4.5.6\lib\netstandard2.0\NLog.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog.Web.AspNetCore">
+      <HintPath>C:\Users\Roman\.nuget\packages\nlog.web.aspnetcore\4.5.4\lib\netstandard2.0\NLog.Web.AspNetCore.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
