--- a/TradingBot.Core/TradingBot.Core.csproj
+++ b/TradingBot.Core/TradingBot.Core.csproj
@@ -5,6 +5,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="NLog.Config" Version="4.5.6" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<Reference Include="System.Configuration">
 			<HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7\System.Configuration.dll</HintPath>
 		</Reference>
