--- a/TradingBot.Web/TradingBot.Web.csproj
+++ b/TradingBot.Web/TradingBot.Web.csproj
@@ -17,8 +17,10 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.8.1" />
-    <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="NLog.Config" Version="4.5.6" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.5.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +36,12 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="wwwroot\ts\Ticker.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="C:\Users\Roman\.nuget\packages\nlog.config\4.5.6\contentFiles\any\any\NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
