--- a/TradingBot.Common/TradingBot.Common.csproj
+++ b/TradingBot.Common/TradingBot.Common.csproj
@@ -12,15 +12,22 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="nlog.config" Version="4.5.6" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="NLog">
-      <HintPath>C:\Users\Roman\.nuget\packages\nlog\4.5.6\lib\netstandard2.0\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="NLog.Web.AspNetCore">
-      <HintPath>C:\Users\Roman\.nuget\packages\nlog.web.aspnetcore\4.5.4\lib\netstandard2.0\NLog.Web.AspNetCore.dll</HintPath>
+      <HintPath>C:\Users\user\.nuget\packages\nlog.web.aspnetcore\4.5.4\lib\netstandard2.0\NLog.Web.AspNetCore.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="C:\Users\user\.nuget\packages\nlog.config\4.5.6\contentFiles\any\any\NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
