--- a/TradingBot.Common/TradingBot.Common.csproj
+++ b/TradingBot.Common/TradingBot.Common.csproj
@@ -13,12 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="nlog.config" Version="4.5.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="NLog.Web.AspNetCore">
-      <HintPath>C:\Users\user\.nuget\packages\nlog.web.aspnetcore\4.5.4\lib\netstandard2.0\NLog.Web.AspNetCore.dll</HintPath>
-    </Reference>
+    <PackageReference Include="nlog.web.aspnetcore" Version="4.5.4" />
   </ItemGroup>
 
   <ItemGroup>
