--- a/Exchange.API/Okex.Api/App.config
+++ b/Exchange.API/Okex.Api/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
+		<add key="Type" value="Okex"/>
 		<add key="PublicUrl" value="https://www.okex.com/api/v1/"/>
 		<add key="PrivateUrl" value="https://www.okex.com/api/v1/"/>
 		<add key="CreatedAt" value="1/1/2018 12:00:00 AM +02:00"/>
