--- a/Exchange.API/Yobit.Api/App.config
+++ b/Exchange.API/Yobit.Api/App.config
@@ -7,5 +7,6 @@
 		<add key="ApiKey" value="B03E731C650825B49CB2840E8449D98D"/>
 		<add key="Secret" value="5ceeeb6072789d30e79a961335e63d50"/>
 		<add key="CreatedAt" value="1/1/2018 12:00:00 AM +02:00"/>
+		<add key="RequestLimit" value="1200"/>
 	</appSettings>
 </configuration>
