--- a/Exchange.API/Bitfinex.Api/App.config
+++ b/Exchange.API/Bitfinex.Api/App.config
@@ -5,5 +5,6 @@
 		<add key="PublicUrl" value="https://api.bitfinex.com/v1/"/>
 		<add key="PrivateUrl" value="https://api.bitfinex.com/v1/"/>
 		<add key="CreatedAt" value="1/1/2018 12:00:00 AM +02:00"/>
+		<add key="RequestLimit" value="1200"/>
 	</appSettings>
 </configuration>
