--- a/Exchange.API/Cryptopia.Api/App.config
+++ b/Exchange.API/Cryptopia.Api/App.config
@@ -5,5 +5,6 @@
 		<add key="PublicUrl" value="https://www.cryptopia.co.nz/api/"/>
 		<add key="PrivateUrl" value="https://www.cryptopia.co.nz/api/"/>
 		<add key="CreatedAt" value="1/1/2018 12:00:00 AM +02:00"/>
+		<add key="RequestLimit" value="1200"/>
 	</appSettings>
 </configuration>
