--- a/TradingBot.CommandPrompt/TradingBot.CommandPrompt.csproj
+++ b/TradingBot.CommandPrompt/TradingBot.CommandPrompt.csproj
@@ -15,9 +15,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Bitmex.Api\Bitmex.Api.csproj" />
 		<ProjectReference Include="..\Exchange.API\Binance.Api\Binance.Api.csproj" />
 		<ProjectReference Include="..\Exchange.API\Bitfinex.Api\Bitfinex.Api.csproj" />
+		<ProjectReference Include="..\Exchange.API\Bitmex.Api\Bitmex.Api.csproj" />
 		<ProjectReference Include="..\Exchange.API\Cryptopia.Api\Cryptopia.Api.csproj" />
 		<ProjectReference Include="..\Exchange.API\Exmo.Api\Exmo.Api.csproj" />
 		<ProjectReference Include="..\Exchange.API\Huobi.Api\Huobi.Api.csproj" />
