--- a/Exchange.API/Bitfinex.Api/Bitfinex.Api.csproj
+++ b/Exchange.API/Bitfinex.Api/Bitfinex.Api.csproj
@@ -9,8 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\TradingBot.Common\TradingBot.Common.csproj" />
-    <ProjectReference Include="..\..\TradingBot.Core\TradingBot.Core.csproj" />
+    <ProjectReference Include="..\..\TradingBot.Api\TradingBot.Api.csproj" />
   </ItemGroup>
 
   <ItemGroup>
