--- a/Exchange.API/Yobit.Api/Yobit.Api.csproj
+++ b/Exchange.API/Yobit.Api/Yobit.Api.csproj
@@ -14,8 +14,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\TradingBot.Core\TradingBot.Core.csproj" />
-		<ProjectReference Include="..\..\TradingBot.Data\TradingBot.Data.csproj" />
+		<ProjectReference Include="..\..\TradingBot.Api\TradingBot.Api.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Include="Microsoft.CSharp">
+	    <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\Microsoft.CSharp\v4.0_4.0.0.0__b03f5f7f11d50a3a\Microsoft.CSharp.dll</HintPath>
+	  </Reference>
 	</ItemGroup>
 
 </Project>
