--- a/TradingBot.Api/TradingBot.Api.csproj
+++ b/TradingBot.Api/TradingBot.Api.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Enums.NET" Version="2.3.2" />
     <PackageReference Include="newtonsoft.json" Version="11.0.2" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
