--- a/Exchange.API/Yobit.Api/App.config
+++ b/Exchange.API/Yobit.Api/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="PublicUrl" value="https://yobit.net/api/3/"/>
-		<add key="PrivateUrl" value="https://yobit.net/tapi/"/>
-		<add key="ApiKey" value="B03E731C650825B49CB2840E8449D98D"/>
-		<add key="Secret" value="5ceeeb6072789d30e79a961335e63d50"/>
-		<add key="CreatedAt" value="1/1/2018 12:00:00 AM +02:00"/>
+		<add key="PublicUrl" value="https://yobit.net/api/3"/>
+		<add key="PrivateUrl" value="https://yobit.net/tapi"/>
+		<add key="ApiKey" value="7435FC34F0255136470545CF3B7102A6"/>
+		<add key="Secret" value="44ec0c376b8db6d8b73a32a3daf86cea"/>
+		<add key="CreatedAt" value="10/13/2018 12:00:00 AM +02:00"/>
 		<add key="RequestLimit" value="1200"/>
 	</appSettings>
 </configuration>
