Implement Bitmex trade API

--- a/Exchange.API/Bitmex.Api/App.config
+++ b/Exchange.API/Bitmex.Api/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="PublicUrl" value="https://testnet.bitmex.com/api/v1/"/>
-    <add key="PrivateUrl" value="https://testnet.bitmex.com/api/v1/"/>
+    <add key="PublicUrl" value="https://www.bitmex.com/api/v1/"/>
+    <add key="PrivateUrl" value="https://www.bitmex.com/api/v1/"/>
     <add key="CreatedAt" value="1/1/2018 12:00:00 AM +02:00"/>
     <add key="RequestLimit" value="1200"/>
   </appSettings>
