Add react page and made a lot of other works

--- a/TradingBot.Proxies/TradingBot.Proxies.csproj
+++ b/TradingBot.Proxies/TradingBot.Proxies.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Exchange.API\Binance.Api\Binance.Api.csproj" />
+    <ProjectReference Include="..\Exchange.API\Bitfinex.Api\Bitfinex.Api.csproj" />
     <ProjectReference Include="..\TradingBot.Core\TradingBot.Core.csproj" />
   </ItemGroup>
 
