--- a/TradingBot.Web/appsettings.json
+++ b/TradingBot.Web/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  }
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
